Updated benchmark classes.